--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": "~7.1",
-        "ext-soap": "~7.1"
+        "ext-soap": "~7.1",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
