--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,19 @@
         "ext-soap": "~7.1",
         "guzzlehttp/guzzle": "^6.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.0",
+        "mockery/mockery": "~1.0",
+        "spatie/phpunit-watcher": "^1.5"
+    },
     "autoload": {
         "psr-4": {
             "TheIconic\\NtlmSoap\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\Unit\\TheIconic\\": "tests/unit"
         }
     },
     "config": {
