--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "~7.1",
         "ext-soap": "~7.1",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "symfony/options-resolver": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
