--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "~7.1",
         "ext-soap": "~7.1",
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/options-resolver": "^4.1"
+        "symfony/options-resolver": "^4.1",
+      "symfony/filesystem": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
