Enable remote WSDL retrieval and caching on the client

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Test\\Unit\\TheIconic\\": "tests/unit"
+            "Test\\Unit\\TheIconic\\NtlmSoap\\": "tests/unit"
         }
     },
     "config": {
