Remove strictness to next significant release for php and soap

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         }
     ],
     "require": {
-        "php": "~7.1",
-        "ext-soap": "~7.1",
+        "php": ">=7.1",
+        "ext-soap": ">=7.1",
         "guzzlehttp/guzzle": "^6.3",
         "symfony/options-resolver": "^4.1",
       "symfony/filesystem": "^4.1"
