--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         "php": ">=7.1",
         "ext-soap": ">=7.1",
         "guzzlehttp/guzzle": "^6.3",
-        "symfony/options-resolver": "^4.1",
-      "symfony/filesystem": "^4.1"
+        "symfony/options-resolver": "^4.1|^5.0",
+        "symfony/filesystem": "^4.1|^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
+        "phpunit/phpunit": "^8.4",
         "mockery/mockery": "~1.0",
         "spatie/phpunit-watcher": "^1.5"
     },
