--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "ext-soap": ">=7.1",
+        "php": "^7.2",
+        "ext-soap": "*",
         "guzzlehttp/guzzle": "^6.3",
         "symfony/options-resolver": "^4.1|^5.0",
         "symfony/filesystem": "^4.1|^5.0"
