--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.4",
         "mockery/mockery": "~1.0",
-        "spatie/phpunit-watcher": "^1.5"
+        "spatie/phpunit-watcher": "^1.5",
+        "php-coveralls/php-coveralls": "^2.2"
     },
     "autoload": {
         "psr-4": {
